# wixmart-kasa-recon

./: .gitignore  README.md  requirements.txt
.github/workflows/: build-windows.yml  test-backend.yml
1c-epf/: README-1C.md
backend/: pyproject.toml  recon_backend.spec  run_backend.py
backend/recon_backend/: __init__.py  launcher.py  main.py
backend/recon_backend/api/: bank_accounts.py  cash_accounts.py  fops.py  odata.py  pidrozdily.py  recon.py  schemas.py  statti.py  sync.py
backend/recon_backend/clients/: __init__.py  odata_1c.py
backend/recon_backend/core/: match.py  match_global.py  parse_cash_journal.py  proportion.py
backend/recon_backend/db/: __init__.py  models.py  session.py
data/config/: README.md  oborot-pidrozdil.xlsx  pidrozdily.xlsx  pravyla-vytrat.xlsx
docs/: install-windows.md
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/api/: api_client.dart  repositories.dart
frontend/lib/models/: models.dart
frontend/lib/providers/: providers.dart
frontend/lib/router/: app_router.dart
frontend/lib/screens/: accounts_screen.dart  dashboard_screen.dart  home_screen.dart  odata_screen.dart  recon_view_screen.dart  upload_screen.dart
frontend/lib/services/: backend_supervisor.dart
frontend/lib/theme/: app_theme.dart
frontend/lib/widgets/: app_shell.dart
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/windows/: CMakeLists.txt
recon/: __init__.py  __main__.py  cli.py  parse_1c.py  parse_privat.py  report.py
scripts/: setup-windows.ps1  start-backend.bat  update-and-restart.bat
(+4 files in other folders)
