[project]
name = "recon-backend"
version = "0.1.0"
description = "Бекенд для звірки ПриватБанк ↔ Каса 1С УНФ (FastAPI + SQLite + OData)"
requires-python = ">=3.11"
dependencies = [
    # FastAPI core
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # БД
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",  # потрібен SQLAlchemy для async
    "alembic>=1.13",
    # HTTP клієнт (для OData і Privat API)
    "httpx>=0.27",
    # Робота з табличними даними
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlsxwriter>=3.2",
    # Фуззі-співставлення
    "rapidfuzz>=3.0",
    # Допоміжне
    "python-dateutil>=2.8",
    "python-multipart>=0.0.9",  # для upload файлів
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",  # для тестів через TestClient
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["recon_backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # довгі рядки норм для українських коментарів

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
